data/forge_javadoc/1.7.10/raw/net/minecraft/command/server/CommandBanIp.md
---
title: "CommandBanIp"
description: "public class CommandBanIp extends CommandBase"
package: "net/minecraft/command/server"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/command/server/CommandBanIp.html"
sourceType: javadoc
---

# CommandBanIp

**Inheritance:** java.lang.Object → net.minecraft.command.CommandBase → net.minecraft.command.server.CommandBanIp

## Class signature

```java
public class CommandBanIp extends CommandBase
```

## Constructors

- `CommandBanIp()`

## Methods

- `java.util.List addTabCompletionOptions(ICommandSender p_71516_1_, java.lang.String[] p_71516_2_)`
- `boolean canCommandSenderUseCommand(ICommandSender p_71519_1_)`
- `protected void func_147210_a(ICommandSender p_147210_1_, java.lang.String p_147210_2_, java.lang.String p_147210_3_)`
- `java.lang.String getCommandName()`
- `java.lang.String getCommandUsage(ICommandSender p_71518_1_)`
- `int getRequiredPermissionLevel()`
- `void processCommand(ICommandSender p_71515_1_, java.lang.String[] p_71515_2_)`

## Fields

- `static java.util.regex.Pattern field_147211_a`
